# device_board_isoftstone

./: EULA  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  READ_zh.md
rk3399/: BUILD.gn  OAT.xml  README_zh.md  ohos.build
rk3399/camera/: product.gni
rk3399/camera/src/device_manager/: BUILD.gn
rk3399/camera/src/pipeline_core/: BUILD.gn
rk3399/camera/src/pipeline_core/ipp_algo_example/: ipp_algo_example.c
rk3399/drivers/audio/dai/src/: rk3399_dai_adapter.c
rk3399/drivers/audio/soc/src/: rk3399_dma_adapter.c  rk3399_dma_ops.c
rk3399/drivers/camera/: BUILD.gn  camera.gni  product.gni
rk3399/drivers/camera/src/device_manager/: BUILD.gn
rk3399/drivers/camera/src/pipeline_core/: BUILD.gn
rk3399/kernel/: BUILD.gn  build_kernel.sh
rk3399/kernel/audio/: Makefile
rk3399/kernel/hdf/driver/camera/: camera.gni  product.gni
rk3399/kernel/patch/: base_startup_initlite.patch  foundation_communication_wifi.patch  patch.sh
rk3399/kernel/patches/: arch.patch  include.patch  kernel-patch.sh  net.patch  others.patch  scripts.patch  sound.patch
rk3399/kernel/src/arch/dts/: rk3399-excavator-sapphire.dtsi  rk3399-fpga.dts  rk3399-sapphire-excavator-linux-3399t.dts  rk3399-sapphire-excavator-linux.dts  rk3399-vop-clk-set.dtsi  rockchip-pinconf.dtsi
rk3399/kernel/src/driv/char/: jy.h
rk3399/kernel/src/driv/dma-buf/: deferred-free-helper.c
rk3399/kernel/src/driv/soc/: rockchip-cpuinfo.c  rockchip_system_monitor.c
rk3399/loader/: parameter.txt  resource.img
rk3399/patch/: ohos_config.json  patch.sh
yangfan/bootanimation/: BUILD.gn
yangfan/cfg/rootfs/: BUILD.gn  fstab.required  fstab.rk3399  ramdisk_resource_config.ini  weston.cfg
yangfan/common/mqtt/: BUILD.gn  README.en.md  README.md  mqtt.gni  ohlos.build  ohos.build
yangfan/common/mqtt/mqttclient_c/src/: MQTTClient.c  MQTTClient.h
yangfan/common/mqtt/mqttpacket/samples/: ping.c  ping_nb.c  pub0sub1.c  pub0sub1_nb.c  qos0pub.c  transport.c
yangfan/common/mqtt/mqttpacket/src/: MQTTConnect.h  MQTTPacket.c  MQTTPacket.h  MQTTPublish.h  MQTTSerializePublish.c  MQTTSubscribe.h  MQTTUnsubscribe.h  MQTTUnsubscribeClient.c  MQTTUnsubscribeServer.c
yangfan/common/mqtt/mqttpacket/test/: test1.c
yangfan/common/util/: BUILD.gn  conn.c  detl.c  entry.c  etor.c  nest.c  pipewire-plugin.c  remoting-plugin.c  scan.c  screen-share.c  simbuf.c  taskhandle.c  termin.c  userinterface.c  utilclit.c  utilsvr.c
yangfan/kernel/drivers/wifi/: BUILD.gn
yangfan/kernel/drivers/wifi/etc/: hostapd.conf
yangfan/kernel/drivers/wifi/modules/: cywdhd.ko
zhiyuan/: BUILD.gn  README_zh.md  device.gni  ohos.build
zhiyuan/bootloader/configs/default/: env.cfg  sys_partition.fex
zhiyuan/bootloader/configs/default/linux-5.10/: sun50iw9.dtsi
zhiyuan/bootloader/configs/zhiyuan/: sys_config.fex
zhiyuan/bootloader/configs/zhiyuan/linux-5.10/: board.dts
zhiyuan/bootloder/configs/default/linux-5.10/: rp-lcd-rgb-7-1024-600.dtsi
zhiyuan/cfg/: BUILD.gn
zhiyuan/cfg/rootfs/: BUILD.gn  init.sun50iw9p1.cfg  init.sun50iw9p1.updater.cfg  init.sun50iw9p1.usb.cfg
zhiyuan/configure/: BUILD.gn
zhiyuan/configure/rootfs/: BUILD.gn  init.sun50iw9p1.cfg  init.sun50iw9p1.updater.cfg
zhiyuan/configure/rootfs/linux-5.10/: init.cfg  init.without_two_stages.cfg
zhiyuan/kernel/: BUILD.gn
zhiyuan/kernel/driver/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/bluetooth/: bcm_btlpm.c  rtl_btlpm.c  xradio_btlpm.c
zhiyuan/kernel/driver/drivers/clk/: Kconfig  Makefile  ccu_common.h
zhiyuan/kernel/driver/drivers/cpufreq/: Kconfig  Makefile  sun50i-cpufreq-nvmem.c
zhiyuan/kernel/driver/drivers/dma/: sunxi-dma.c
zhiyuan/kernel/driver/drivers/drm/: Kconfig  Makefile  sunxi_drm_bootlogo.c  sunxi_drm_connector.c  sunxi_drm_connector.h  sunxi_drm_crtc.c  sunxi_drm_crtc.h  sunxi_drm_drv.c  sunxi_drm_drv.h  sunxi_drm_encoder.c  sunxi_drm_fb.c  sunxi_drm_fb.h  sunxi_drm_fbdev.c  sunxi_drm_fbdev.h  sunxi_drm_gem.c  sunxi_drm_gem.h  sunxi_drm_hdmi_connector.c  sunxi_drm_hdmi_edid.c  sunxi_drm_iommu.h  sunxi_drm_lcd_connector.c  sunxi_drm_plane.c  sunxi_drm_plane.h  sunxi_drm_sysfs.c  sunxi_drm_sysfs.h  sunxi_drm_tv_connector.c
zhiyuan/kernel/driver/drivers/emac/: Kconfig  sun4i-emac.c  sun4i-mdio.c
zhiyuan/kernel/driver/drivers/g2d/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/gmac/: Kconfig  Makefile  sunxi-gmac-ops.c  sunxi-gmac.c  sunxi-gmac.h  sunxi-mdio.c
zhiyuan/kernel/driver/drivers/gpadc/: sunxi_gpadc.c
zhiyuan/kernel/driver/drivers/i2c/: i2c-sunxi.c
zhiyuan/kernel/driver/drivers/input/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/iommu/: Kconfig  sunxi-iommu.c  sunxi-iommu.h
zhiyuan/kernel/driver/drivers/irqchip/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/ledc/: ledc-sunxi.c
zhiyuan/kernel/driver/drivers/lradc/: sunxi-lradc.c  sunxi-lradc.h
zhiyuan/kernel/driver/drivers/misc/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/mmc/: Kconfig  Makefile  sunxi-mmc-debug.c  sunxi-mmc-panic.c  sunxi-mmc-sun50iw1p1-0.c  sunxi-mmc-sun50iw1p1-1.c  sunxi-mmc-sun50iw1p1-2.c  sunxi-mmc-v4p00x.c  sunxi-mmc-v4p10x.c  sunxi-mmc-v4p1x.c  sunxi-mmc-v4p5x.c  sunxi-mmc-v5p3x.c  sunxi-mmc-v5px.c  sunxi-mmc.c  sunxi-mmc.h
zhiyuan/kernel/driver/drivers/net/: Kconfig
zhiyuan/kernel/driver/drivers/nvmem/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/pinctrl/: Kconfig  Makefile  pinctrl-sun50iw10p1-r.c  pinctrl-sun50iw10p1.c  pinctrl-sun50iw9.c  pinctrl-sunxi.c  pinctrl-sunxi.h
zhiyuan/kernel/driver/drivers/power/: Kconfig  Makefile
zhiyuan/kernel/driver/drivers/pwm/: pwm-sunxi.c  pwm-sunxi.h
zhiyuan/kernel/driver/drivers/rtc/: rtc-sunxi.c  rtc-sunxi.h
zhiyuan/kernel/driver/drivers/sid/: sunxi-sid.c
zhiyuan/kernel/driver/drivers/smc/: sunxi-smc.c
zhiyuan/kernel/driver/drivers/vin/: vin.c  (+2 more)
zhiyuan/kernel/driver/include/: sunxi-sid.h
zhiyuan/kernel/driver/platform/: Kconfig
zhiyuan/kernel/driver/ramfs/: e_build.sh
zhiyuan/kernel/hdf/driver/: camera.gni
zhiyuan/loader/configs/bearpi/: sys_config.fex
zhiyuan/loader/configs/default/: env.cfg
(+556 files in other folders)
