# Copyright (c) 2021-2022 iSoftStone Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/ohos.gni")

print("rk3399_group in")
group("rk3399_group") {
  deps = [
    "kernel:kernel",
    "build/rootfs:init_configs",
    "bootanimation:bootanimation",
    "//device/soc/rockchip/hardware:hardware_group",
  ]
}
