# Copyright (C) 2022 iSoftStone Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

print("device_type=${product_name}")
device_type="${product_name}"
group("products_group") {
  if (device_type == "t507_pines") {
    deps = [
      "//device/board/seed/t507_pines/cfg:rc_files",
      "//device/board/seed/t507_pines/cfg/rootfs:init_configs",
    ]
  }

  deps += [
    "//device/soc/allwinner/t507/hardware:hardware_group",
    "//device/board/seed/t507_pines/kernel/build:kernel",
  ]
}
