# Copyright (c) 2021-2022 iSoftStone Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
kernel_build_script_dir = "//kernel/linux/linux-5.10"
kernel_source_dir = "//kernel/linux/linux-5.10"

action("kernel") {
  script = "build_kernel.sh"
  sources = [ kernel_source_dir ]

  product_path = "vendor/$product_company/$product_name"
  outputs = [ "$root_build_dir/../kernel/src_tmp/linux-5.10/boot_linux" ]
  args = [
    rebase_path(kernel_build_script_dir, root_build_dir),
    rebase_path("$root_build_dir/packages/phone/images"),
    rebase_path("//device/board/isoftstone/$device_name"),
    product_path,
    rebase_path("$root_build_dir/../.."),
  ]
  if (enable_ramdisk) {
    args += [ "enable_ramdisk" ]
  }
}
