# Copyright (C) 2022 VYAGOO TECHNOLOGY Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

ic_name="t507"
arch_version="arm64"
root_path=rebase_path("$root_build_dir/../..")
kernel_source_dir = "//kernel/linux/$linux_kernel_version"
gpu_file_name="mali_kbase.ko"

if (linux_kernel_version == "linux-4.19") {
  module_source_dir = "${root_path}/out/KERNEL_OBJ/kernel/src_tmp/${linux_kernel_version}/output/lib/modules/4.19.155"
  source_path="//out/KERNEL_OBJ/kernel/src_tmp/${linux_kernel_version}/output/lib/modules/4.19.155/${gpu_file_name}"
} else if (linux_kernel_version == "linux-5.10") {
  module_source_dir = "${root_path}/out/${ic_name}/bearpi/bsp/rootfs_def/lib/modules/5.10.79"
  source_path="//out/${ic_name}/bearpi/bsp/rootfs_def/lib/modules/5.10.79/${gpu_file_name}"
}

exec_script("check_env.sh", [ "${module_source_dir}", "${gpu_file_name}"])

action("kernel") {
  script = "make_kernel.sh"
  sources = [ kernel_source_dir ]
  outputs = [ "$root_build_dir/build_kernel.tamp" ]
  args = [
    ic_name,
    linux_kernel_version,
    arch_version,
    root_path,
  ]
}

ohos_prebuilt_etc("kernel_module") {
  source = "$source_path"
  module_install_dir = "lib/module"
  install_images = [ "system" ]
  part_name = "allwinner_products"
  deps = [ ":kernel" ]
}

