# Copyright (c) 2021-2022 iSoftStone Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/ohos.gni")

ohos_prebuilt_etc("init.rk3399.cfg") {
  source = "init.rk3399.cfg"
  part_name = "device_yangfan"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("weston.cfg") {
  install_enable = true
  source = "weston.cfg"
  module_install_dir = "etc/init"
  install_images = [ chipset_base_dir ]
  part_name = "device_yangfan"
}

ohos_prebuilt_etc("init.rk3399.usb.cfg") {
  source = "init.rk3399.usb.cfg"
  part_name = "device_yangfan"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.rk3399") {
  source = "fstab.rk3399"
  part_name = "device_yangfan"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

if (enable_ramdisk) {
  ohos_copy("fstab.required") {
    sources = [ "fstab.rk3399" ]
    outputs = [ "$root_build_dir/fstab.required" ]
  }
  ohos_copy("ramdisk_resource_config.ini") {
    sources = [ "ramdisk_resource_config.ini" ]
    outputs = [ "$root_build_dir/../../build/ohos/images/mkimage/ramdisk_resource_config.ini" ]
  }
} else {
  ohos_prebuilt_etc("fstab.required") {
    source = "fstab.required"
    part_name = "device_yangfan"
    install_images = [ "system" ]
    install_enable = true
  }
}

group("init_configs") {
  deps = [
    ":fstab.required",
    ":fstab.rk3399",
    ":init.rk3399.cfg",
    ":init.rk3399.usb.cfg",
    ":weston.cfg",
  ]
  if (enable_ramdisk) {
    deps += [ ":ramdisk_resource_config.ini" ]
  }
}
