# Copyright (C) 2022 iSoftStone Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

ohos_prebuilt_etc("init.sun50iw9p1.cfg") {
  source = "init.sun50iw9p1.cfg"
  module_install_dir = "etc"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
  install_enable = true
}

ohos_prebuilt_etc("init.sun50iw9p1.usb.cfg") {
  source = "init.sun50iw9p1.usb.cfg"
  module_install_dir = "etc"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
  install_enable = true
}

ohos_prebuilt_etc("init.sun50iw9p1.updater.cfg") {
  source = "init.sun50iw9p1.updater.cfg"
  install_images = [ "updater" ]
  part_name = "allwinner_products"
  install_enable = true
}

group("init_configs") {
  deps = [
    ":init.sun50iw9p1.cfg",
    ":init.sun50iw9p1.updater.cfg",
    ":init.sun50iw9p1.usb.cfg",
  ]
}
