# Copyright (C) iSoftStone Device Co., Ltd. 2022 - 2023. All rights reserved.

import("//build/ohos.gni")
import("//device/board/${product_company}/${device_name}/device.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/camera/camera.gni")

config("v4l2_config") {
  visibility = [ ":*" ]

  cflags = [
    "-DGST_DISABLE_DEPRECATED",
    "-DHAVE_CONFIG_H",
    "-DCOLORSPACE=\"videoconvert\"",
  ]

  if (enable_camera_device_utest) {
    cflags += [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]

    ldflags = [ "--coverage" ]
  }
}

ohos_shared_library("camera_v4l2_adapter") {
  sources = [
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_buffer.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_control.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_dev.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_fileformat.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_stream.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_uvc.cpp",
  ]

  include_dirs = [
    "$camera_path/include",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/include",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hdf_core:libhdf_utils",
      "hilog:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [ "drivers_interface_camera:metadata" ]
  public_configs = [ ":v4l2_config" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}
